# cloudflare-infra

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: build-bump-tool.yml  build-router-worker.yml  deploy-apps-and-router.yml  deploy-apps.yml  deploy-router.yml  deploy-worker.yml  terraform.yml  uptime-monitor.yml
terraform/: backend.hcl.example  backend.tf  bootstrap-worker.js  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
worker/: Cargo.toml  Makefile  apps.yaml  package-lock.json  package.json  router.js.tmpl  tsconfig.json  wrangler.deploy.toml  wrangler.toml
worker/src/: app-sources.json  apps.yaml  catalog.rs  constants.rs  errors.rs  fetch.rs  index.ts  lib.rs  route-definitions.json  router.rs  router.ts  routes.rs  routes.ts  sitemap.rs  types.ts
worker/src/router/: matcher.rs  mod.rs  proxy.rs
worker/tests/: handler.test.ts  router.test.ts
