[package]
name = "domain-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = ">=2.5, <3"
js-sys = "0.3"
wasm-bindgen = "=0.2.105"
quick-xml = { version = "0.37", default-features = false }
lol_html = { version = "2.9.0", default-features = false }
